Bug 127825 - DOCX Textboxes incorrectly positioned on page
Summary: DOCX Textboxes incorrectly positioned on page
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.4.0 target:6.3.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-09-27 13:58 UTC by Luke
Modified: 2020-11-04 08:00 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot Word vs Writer (153.54 KB, image/png)
2019-09-27 17:40 UTC, Luke
Details
Example showing position based on alignment, absolute, and relative parameters (25.47 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-09-28 19:29 UTC, Luke
Details
How this looked like in the past. (7.99 KB, application/pdf)
2019-10-01 15:36 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2019-09-27 13:58:32 UTC
In recent versions of LO, imported textboxes are being shifted down to the bottom margin.

Steps to reproduce:
1. Open attachment 142426 [details] in LO 6.2 or Word
2. Open attachment 142426 [details] in Writer 6.4
3. Compare

Expected results:
Both text boxes should be in the middle of the page

Actual:
In Version: 6.4.0.0.alpha0+ (x64)
Build ID: 6b888ac476fe6ac2ee96c7086cb8c24249f08473
Both textboxes shifted to bottom margin


In Version: 6.3.0.0.alpha1+ (x64)
Build ID: 3f5f67c68ae42cd14c08341b597e0331358a0d3f
left textbox bad / right textbox good

In Version: 6.3.0.0.alpha0+ (x64)
Build ID: c61623028b79f918d0ed2bc2ca47db17e68a26cb
Good / both text boxes in middle of page
Comment 1 Luke 2019-09-27 17:40:07 UTC
Created attachment 154603 [details]
Screenshot Word vs Writer
Comment 2 raal 2019-09-28 11:47:07 UTC
(In reply to Luke from comment #0)
> In Version: 6.3.0.0.alpha1+ (x64)
> Build ID: 3f5f67c68ae42cd14c08341b597e0331358a0d3f
> left textbox bad / right textbox good

This seems to have begun at the below commit.
Adding Cc: to Miklos Vajna ; Could you possibly take a look at this one?
Thanks
 2741230a3ababfb2f72aab3fecc03dabf891ab02 is the first bad commit
commit 2741230a3ababfb2f72aab3fecc03dabf891ab02
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Apr 26 10:13:11 2019 +0200

    source ff17478e069cc82681df62514876c06365dd5cd6

author	Miklos Vajna <vmiklos@collabora.com>	2019-04-25 21:05:43 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2019-04-26 09:05:04 +0200
commit ff17478e069cc82681df62514876c06365dd5cd6 (patch)
tree 172435a271013210b49c372ffa441e949e1a2b47
parent 647660cf844f265dd2ad7c78e6cb13844fbf3613 (diff)
sw btlr writing mode: implement DOCX shape import for tbrl
Comment 3 Luke 2019-09-28 19:29:24 UTC
Created attachment 154627 [details]
Example showing position based on alignment, absolute, and relative parameters

Position based on Absolute, Relative, and Alignment are all move to the bottom.
Comment 4 Miklos Vajna 2019-10-01 15:36:05 UTC
Created attachment 154685 [details]
How this looked like in the past.

To set expectations, I attach how this worked:

1) text was rotated in the btlr case, not in the tblr case (but with the above commit, both should work

2) the shapes had the correct position

3) text was within the shape

4) actual automatic height (width when rendering) was already non-working, so that would be a topic for a separate, non-regression bug.
Comment 5 Commit Notification 2019-10-08 06:50:03 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9c81d0a268cca4ff36eff94c0842361b9c0287ef

tdf#127825 DOCX import: fix handling for tbrl, auto-height and rel size shapes

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2019-10-09 14:34:08 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/a89f71f7195881b75a933a925f845a9c6447f7a3

tdf#127825 DOCX import: fix handling for tbrl, auto-height and rel size shapes

It will be available in 6.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2019-10-16 10:41:28 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: e2d82611088677f8ec9f038639567f2d7c699b5e
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!
Comment 8 Xisco Faulí 2019-10-17 12:46:37 UTC
*** Bug 123325 has been marked as a duplicate of this bug. ***