tdf#127825 DOCX import: fix handling for tbrl, auto-height and rel size shapes

Regression from commit ff17478e069cc82681df62514876c06365dd5cd6 (sw btlr
writing mode: implement DOCX shape import for tbrl, 2019-04-25), there
were two problems here:

1) Relative size currently only works properly for the lrtb direction,
so disable that during import till sw core is improved.

2) When SwFlyFrame::Format() auto-grows a text frame which is the
textbox of a shape, it needs to notify the shape about the physical size
of the frame, not the logical one. So going via the SwRectFnSet
abstraction is not correct in this case.

Change-Id: Ie185c7415d90594434eac8f459630d6a3212328a
Reviewed-on: https://gerrit.libreoffice.org/80398
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>